--- a/.github/workflows/public-release.yml
+++ b/.github/workflows/public-release.yml
@@ -115,7 +115,7 @@ jobs:
 
           # collect dsym
           mkdir -p build/DSYMs
-          for f in bazel-out/applebin_ios-ios_arm*-opt-ST-*/bin/Telegram/*.dSYM; do
+          for f in bazel-bin/Telegram/**/*.dSYM; do
             cp -R "$f" build/DSYMs/
           done
           zip -r "./$OUTPUT_PATH/Telegram.DSYMs.zip" build/DSYMs 1>/dev/null
